# ylq

./: README.md
server/: run.sh
server/config/: bs_config.lua  cs_config.lua  gs_config.lua
server/daobiao/: clientzip.py  clientzip.sh  create_invitecode.py  md5zip.py  run.cmd  run.sh  xls2lua.py  功能对应导表.xlsx  客户端导表.txt  导表说明文档.doc
server/doc/: C层代码编写需知.docx  log相关.docx  proto相关.docx  pymongo简单例子.docx  web相关配置.docx  ~$外服维护.docx  内存分析.docx  函数耗时监测.docx  压测流程.docx  后门功能使用.docx  在线更新(新,暂未使用).docx  在线更新.docx  外服维护(新,暂未使用).docx  外服维护.docx  存盘说明.docx  工作权限相关.docx  常用脚本.docx  开发期常见操作.docx  开发注意事项.docx  开发环境配置.docx  扩充虚拟机硬盘容量.docx  搭建.docx  新服配置.docx  服务端架构.docx  服务端目录结构.docx  模拟客户端使用.docx  调优计划(优先).docx  运维备份策略.docx  运营后台定制开发.docx  配置文件及代码发布.docx
server/service/: bs_launcher.lua  cs_launcher.lua  gs_launcher.lua  ks_launcher.lua
server/shell/: all_start.sh  bs_close.sh  bs_kill.sh  bs_mantain.sh  bs_run.sh  bs_start.sh  cal_pay.py  check_lua.lua  check_lua.sh  check_proto.lua  check_proto.sh  chg_server.py  clear_log.sh  client_code.sh  client_res.sh  clientzip.sh  cs_close.sh  cs_kill.sh  cs_mantain.sh  cs_run.sh  cs_start.sh  des_encode.py  des_encode.sh  drop_all_db.sh  drop_cs_data.sh  drop_db.sh  dropdbs.js  fix_bug.py  fix_bug.sh  flagdate.sh  (+43 more)
server/skynet/3rd/gdsl/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  acconfig.h  config.h  config.h.in  config.status  configure  configure.ac  gdsl-config  gdsl-config.in  gdsl.spec  gdsl.spec.in  libtool
server/skynet/3rd/gdsl/autom4te.cache/: output.0  requests  traces.0
server/skynet/3rd/gdsl/doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in
server/skynet/3rd/gdsl/doc/html/: Makefile  Makefile.am  Makefile.in  __gdsl__bintree_8h-source.html  __gdsl__bintree_8h.html  __gdsl__bstree_8h-source.html  __gdsl__bstree_8h_source.html  __gdsl__list_8h-source.html  __gdsl__list_8h_source.html  __gdsl__node_8h_source.html  dir_000000.html  files.html  gdsl_8h.html  gdsl_8h_source.html  gdsl__2darray_8h-source.html  gdsl__2darray_8h_source.html  gdsl__bstree_8h_source.html  gdsl__hash_8h-source.html  gdsl__hash_8h_source.html  gdsl__heap_8h.html  gdsl__interval__heap_8h_source.html  gdsl__list_8h_source.html  gdsl__macros_8h-source.html  gdsl__macros_8h.html  gdsl__macros_8h_source.html  gdsl__perm_8h_source.html  gdsl__queue_8h_source.html  gdsl__rbtree_8h-source.html  gdsl__rbtree_8h_source.html  gdsl__stack_8h-source.html  gdsl__stack_8h.html  gdsl__types_8h.html  globals.html  globals_0x62.html  globals_0x66.html  globals_0x67.html  globals_0x74.html  globals_0x75.html  globals_defs.html  globals_eval.html  (+16 more)
server/skynet/3rd/gdsl/doc/latex/: Makefile  Makefile.am  Makefile.in
server/skynet/3rd/gdsl/doc/man3/: GDSL_MIN.3  Makefile  Makefile.am  Makefile.in  _gdsl_bintree.3  _gdsl_bintree_map_postfix.3  _gdsl_bstree.3  _gdsl_bstree_write_func_t.3  _gdsl_list_is_empty.3  _home_nicolas_projets_gna_gdsl_src_.3  gdsl_2darray.3  gdsl_2darray_t.3  gdsl_bstree.h.3  gdsl_hash.3  gdsl_hash_get_lists_max_size.3  gdsl_heap.3  gdsl_heap_write.3  gdsl_interval_heap.3  gdsl_interval_heap.h.3  gdsl_list.3  gdsl_list.h.3  gdsl_perm.3  gdsl_queue.3  gdsl_rbtree.3  gdsl_rbtree_set_name.3  gdsl_sort.h.3  gdsl_stack_set_growing_factor.3  gdsl_types.h.3  mainpage.h.3
server/skynet/3rd/gdsl/include/gdsl/: gdsl_heap.h  gdsl_perm.h  gdsl_queue.h  gdsl_stack.h
server/skynet/3rd/gdsl/lib/: libgdsl.la  libgdsl.so.1.0.8
server/skynet/3rd/gdsl/share/doc/gdsl/: AUTHORS  NEWS  THANKS  refman.dvi  refman.ps
server/skynet/3rd/gdsl/share/doc/gdsl/html/: __gdsl__bintree_8h_source.html  __gdsl__bstree_8h.html  __gdsl__list_8h.html  __gdsl__node_8h-source.html  __gdsl__node_8h.html  dirs.html  gdsl_8h-source.html  gdsl__2darray_8h.html  gdsl__bstree_8h-source.html  gdsl__bstree_8h.html  gdsl__hash_8h.html  gdsl__heap_8h-source.html  gdsl__heap_8h_source.html  gdsl__interval__heap_8h.html  gdsl__list_8h-source.html  gdsl__list_8h.html  gdsl__perm_8h-source.html  gdsl__perm_8h.html  gdsl__queue_8h-source.html  gdsl__queue_8h.html  gdsl__rbtree_8h.html  gdsl__sort_8h-source.html  gdsl__sort_8h.html  gdsl__sort_8h_source.html  gdsl__stack_8h_source.html  gdsl__types_8h-source.html  gdsl__types_8h_source.html  globals_enum.html  globals_func.html  graph_legend.html  group____gdsl__node.html  group__gdsl.html  group__gdsl__heap.html  group__gdsl__interval__heap.html  group__gdsl__queue.html  group__gdsl__stack.html  group__gdsl__types.html  main.html  mainpage_8h_source.html  modules.html  (+1 more)
server/skynet/3rd/gdsl/share/man/man3/: GDSL_LOCATION_ROOT.3  _gdsl_bintree.h.3  _gdsl_bstree.h.3  _gdsl_list.3  _gdsl_list.h.3  _gdsl_node.3  _gdsl_node.h.3  _gdsl_node_alloc.3  gdsl.3  gdsl.h.3  gdsl_2darray.h.3  gdsl_bstree.3  gdsl_bstree_get_size.3  gdsl_get_version.3  gdsl_hash.h.3  gdsl_heap.h.3  gdsl_interval_heap_remove_max.3  gdsl_list_map_forward.3  gdsl_macros.3  gdsl_macros.h.3  gdsl_perm.h.3  gdsl_perm_apply_on_array.3  gdsl_queue.h.3  gdsl_queue_get_tail.3  gdsl_rbtree.h.3  gdsl_sort.3  gdsl_stack.3  gdsl_stack.h.3  gdsl_types.3
server/skynet/3rd/gdsl/src/: Makefile  Makefile.am  Makefile.in  _gdsl_bintree.c  _gdsl_bstree.c  _gdsl_bstree.h  _gdsl_list.c  _gdsl_list.h  _gdsl_node.c  _gdsl_node.h  gdsl.c  gdsl_2darray.c  gdsl_bstree.c  gdsl_hash.c  gdsl_hash.h  gdsl_heap.c  gdsl_interval_heap.c  gdsl_list.c  gdsl_perm.c  gdsl_queue.c  gdsl_rbtree.c  gdsl_sort.c  gdsl_sort.h  gdsl_stack.c  mainpage.h  mainpage.h.in
server/skynet/3rd/gdsl/src/.deps/: _gdsl_bintree.Plo  _gdsl_bstree.Plo  _gdsl_list.Plo  _gdsl_node.Plo  gdsl.Plo  gdsl_2darray.Plo  gdsl_bstree.Plo  gdsl_hash.Plo  gdsl_heap.Plo  gdsl_interval_heap.Plo  gdsl_list.Plo  gdsl_perm.Plo  gdsl_queue.Plo  gdsl_rbtree.Plo  gdsl_sort.Plo  gdsl_stack.Plo
server/skynet/3rd/gdsl/src/examples/: Makefile  Makefile.am  Makefile.in  _integers.c  _integers.h  _strings.c  _strings.h  main_2darray.c  main_bstree.c  main_hash.c  main_heap.c  main_interval_heap.c  main_list.c  main_llbintree.c  main_llbstree.c  main_lllist.c  main_perm.c  main_queue.c  main_rbtree.c  main_sort.c  main_stack.c
(+3143 files in other folders)
