## Process this file with automake to produce Makefile.in

CLEANFILES	= *~ .*~

doc_DATA	= ./ftv2folderclosed.png \
./dir_000000_dep.png \
./gdsl__macros_8h_source.html \
./globals_defs.html \
./gdsl__sort_8h-source.html \
./globals.html \
./ftv2pnode.png \
./group__gdsl__sort.html \
./gdsl__rbtree_8h-source.html \
./gdsl__list_8h.html \
./tabs.css \
./gdsl__types_8h-source.html \
./ftv2doc.png \
./gdsl__bstree_8h.html \
./mainpage_8h.html \
./gdsl__bstree_8h-source.html \
./group__gdsl__hash.html \
./tab_s.png \
./gdsl__list_8h_source.html \
./gdsl__macros_8h-source.html \
./__gdsl__list_8h-source.html \
./index.html \
./bc_s.png \
./globals_eval.html \
./gdsl__stack_8h_source.html \
./gdsl__stack_8h.html \
./globals_type.html \
./gdsl__2darray_8h.html \
./__gdsl__list_8h.html \
./tree.html \
./graph_legend.html \
./group____gdsl__node.html \
./dir_000000.html \
./gdsl__sort_8h.html \
./gdsl__hash_8h.html \
./ftv2blank.png \
./nav_h.png \
./open.png \
./dirs.html \
./group__gdsl__rbtree.html \
./__gdsl__bstree_8h.html \
./gdsl_8h-source.html \
./mainpage_8h_source.html \
./group__gdsl__queue.html \
./doxygen.png \
./group__gdsl__heap.html \
./doxygen.css \
./globals_func_0x67.html \
./tab_h.png \
./gdsl__hash_8h_source.html \
./gdsl__queue_8h_source.html \
./ftv2folderopen.png \
./gdsl__rbtree_8h.html \
./group__gdsl.html \
./gdsl__hash_8h-source.html \
./ftv2link.png \
./gdsl__queue_8h-source.html \
./gdsl__bstree_8h_source.html \
./__gdsl__bintree_8h_source.html \
./gdsl__perm_8h.html \
./tab_l.gif \
./gdsl__heap_8h-source.html \
./group__gdsl__types.html \
./ftv2splitbar.png \
./graph_legend.png \
./globals_0x74.html \
./gdsl__sort_8h_source.html \
./gdsl__list_8h-source.html \
./ftv2vertline.png \
./gdsl__rbtree_8h_source.html \
./gdsl__heap_8h_source.html \
./gdsl_8h_source.html \
./ftv2node.png \
./ftv2mlastnode.png \
./gdsl__stack_8h-source.html \
./tab_a.png \
./__gdsl__list_8h_source.html \
./globals_0x75.html \
./group__gdsl__list.html \
./tab_b.png \
./gdsl__macros_8h.html \
./navtree.css \
./gdsl__2darray_8h-source.html \
./__gdsl__node_8h-source.html \
./gdsl__queue_8h.html \
./__gdsl__node_8h.html \
./gdsl__interval__heap_8h_source.html \
./group__gdsl__stack.html \
./closed.png \
./group____gdsl__bintree.html \
./main.html \
./globals_func.html \
./nav_f.png \
./globals_0x62.html \
./files.html \
./globals_0x67.html \
./modules.html \
./group__gdsl__macros.html \
./__gdsl__bstree_8h-source.html \
./globals_0x66.html \
./tab_r.gif \
./globals_enum.html \
./group__gdsl__2darray.html \
./gdsl__2darray_8h_source.html \
./gdsl__interval__heap_8h.html \
./ftv2plastnode.png \
./ftv2mnode.png \
./gdsl__types_8h.html \
./__gdsl__bintree_8h.html \
./gdsl__perm_8h_source.html \
./group____gdsl__bstree.html \
./gdsl__heap_8h.html \
./tab_b.gif \
./gdsl_8h.html \
./group__gdsl__bstree.html \
./gdsl__perm_8h-source.html \
./mainpage_8h-source.html \
./__gdsl__node_8h_source.html \
./group__gdsl__interval__heap.html \
./group__gdsl__perm.html \
./ftv2lastnode.png \
./group____gdsl__list.html \
./__gdsl__bintree_8h-source.html \
./gdsl__types_8h_source.html \
./__gdsl__bstree_8h_source.html

docdir          = $(datadir)/doc/@PACKAGE@/html

EXTRA_DIST	= $(doc_DATA)

fileslist:  	 
		@rm -f l && find . -iregex ".*\(html\|png\|css\|gif\)" >> l
