## Process this file with automake to produce Makefile.in

CLEANFILES	= *~ .*~

man_MANS	= ./gdsl_perm_canonical_cycles_count.3 \
./gdsl_bstree_is_empty.3 \
./gdsl_interval_heap_set_name.3 \
./_gdsl_bintree_copy.3 \
./gdsl_2darray_free.3 \
./gdsl_list_cursor_alloc.3 \
./GDSL_LOCATION_TOP.3 \
./gdsl_stack_insert.3 \
./_gdsl_bstree_map_func_t.3 \
./gdsl_stack_get_size.3 \
./_gdsl_node_get_pred.3 \
./gdsl_types.h.3 \
./gdsl_stack_write_xml.3 \
./gdsl_interval_heap_is_empty.3 \
./gdsl_rbtree_delete.3 \
./ulong.3 \
./gdsl_perm_randomize.3 \
./gdsl_stack_write.3 \
./gdsl_list_cursor_is_on_tail.3 \
./_gdsl_bintree_get_height.3 \
./_gdsl_bintree_map_prefix.3 \
./_gdsl_node_write.3 \
./gdsl_queue_map_forward.3 \
./gdsl_2darray_write_xml.3 \
./gdsl_hash_modify.3 \
./gdsl_list_insert_tail.3 \
./_gdsl_bstree_write.3 \
./gdsl_hash_func_t.3 \
./gdsl_2darray.h.3 \
./_gdsl_bstree_dump.3 \
./gdsl_bstree_get_name.3 \
./_gdsl_bintree_write_xml.3 \
./gdsl_list_cursor_delete_before.3 \
./_gdsl_bstree_get_size.3 \
./gdsl_rbtree.3 \
./_gdsl_bintree_set_content.3 \
./gdsl_list_alloc.3 \
./_gdsl_bintree_rotate_right.3 \
./gdsl_list_search_min.3 \
./gdsl_list_cursor_delete_after.3 \
./gdsl_bstree_alloc.3 \
./gdsl_2darray_t.3 \
./_gdsl_list_map_backward.3 \
./gdsl_list_get_tail.3 \
./gdsl_2darray_dump.3 \
./gdsl_rbtree_get_name.3 \
./_gdsl_node_set_pred.3 \
./gdsl_interval_heap_get_name.3 \
./_gdsl_bstree_map_infix.3 \
./gdsl_heap_set_top.3 \
./_gdsl_node_free.3 \
./gdsl_list_cursor_is_on_head.3 \
./gdsl_types.3 \
./gdsl_queue_search_by_position.3 \
./gdsl_hash.h.3 \
./GDSL_MAP_CONT.3 \
./gdsl_hash_write_xml.3 \
./gdsl_list_get_size.3 \
./GDSL_INSERTED.3 \
./_gdsl_bintree_map_func_t.3 \
./gdsl_stack_map_backward.3 \
./gdsl_list_cursor_move_to_position.3 \
./gdsl_list_cursor_has_succ.3 \
./gdsl_list_cursor_move_to_value.3 \
./gdsl_heap_map_forward.3 \
./gdsl_2darray_get_rows_number.3 \
./gdsl_bstree.h.3 \
./gdsl_stack_t.3 \
./gdsl_queue_write_xml.3 \
./gdsl_bstree_get_size.3 \
./_gdsl_bstree_map_prefix.3 \
./gdsl_queue_t.3 \
./gdsl_macros.h.3 \
./mainpage.h.3 \
./gdsl_stack_dump.3 \
./_gdsl_bstree_get_right.3 \
./gdsl_heap_insert.3 \
./gdsl_queue_map_backward.3 \
./gdsl_perm_write.3 \
./gdsl_rbtree_map_postfix.3 \
./GDSL_LOCATION_LEAF.3 \
./gdsl_bstree_search.3 \
./gdsl_hash_free.3 \
./_gdsl_list_alloc.3 \
./_home_nicolas_projets_gna_gdsl_src_.3 \
./gdsl_list_delete.3 \
./_gdsl_list_is_empty.3 \
./gdsl_list_write.3 \
./gdsl_hash_get_name.3 \
./gdsl_list_sort.3 \
./gdsl_bstree_flush.3 \
./GDSL_LOCATION_FIRST_ROW.3 \
./gdsl_hash.3 \
./gdsl_perm_free.3 \
./gdsl_hash_alloc.3 \
./gdsl_perm_set_name.3 \
./gdsl_2darray_set_name.3 \
./_gdsl_node.h.3 \
./gdsl_perm_linear_prev.3 \
./gdsl_list_search_max.3 \
./GDSL_PERM_POSITION_FIRST.3 \
./_gdsl_bstree_search.3 \
./gdsl_stack_flush.3 \
./gdsl_list_get_head.3 \
./gdsl_list_free.3 \
./gdsl_rbtree_flush.3 \
./gdsl_heap_set_name.3 \
./GDSL_LOCATION_LAST_COL.3 \
./gdsl_perm_write_func_t.3 \
./_gdsl_bintree_set_parent.3 \
./gdsl_list_is_empty.3 \
./gdsl_2darray_set_content.3 \
./gdsl_perm_linear_inversions_count.3 \
./gdsl_rbtree_alloc.3 \
./_gdsl_bintree_alloc.3 \
./gdsl_list_get_name.3 \
./_gdsl_list_remove.3 \
./gdsl_perm_get_element.3 \
./gdsl_queue_dump.3 \
./gdsl_interval_heap_write_xml.3 \
./gdsl_map_func_t.3 \
./gdsl_interval_heap_insert.3 \
./gdsl_list_delete_tail.3 \
./gdsl_heap_write.3 \
./gdsl_stack_search.3 \
./_gdsl_list.h.3 \
./gdsl_interval_heap_alloc.3 \
./gdsl_interval_heap_delete_min.3 \
./gdsl_write_func_t.3 \
./gdsl_heap_is_empty.3 \
./gdsl_queue_alloc.3 \
./gdsl_queue_free.3 \
./gdsl_interval_heap_delete_max.3 \
./gdsl_interval_heap_get_size.3 \
./GDSL_PERM_POSITION_LAST.3 \
./gdsl_interval_heap_remove_max.3 \
./_gdsl_bintree_map_infix.3 \
./gdsl_bstree_write.3 \
./gdsl_list_map_forward.3 \
./gdsl_hash_get_fill_factor.3 \
./gdsl_hash_flush.3 \
./gdsl_stack_is_empty.3 \
./gdsl_rbtree_get_root.3 \
./gdsl_2darray_get_content.3 \
./_gdsl_bintree_write_func_t.3 \
./gdsl_list_search.3 \
./gdsl_hash_dump.3 \
./gdsl_rbtree_free.3 \
./gdsl_hash_t.3 \
./gdsl_stack_get_name.3 \
./gdsl_list_cursor_remove.3 \
./gdsl_rbtree_map_infix.3 \
./gdsl_interval_heap_get_max.3 \
./gdsl_perm_multiply.3 \
./GDSL_LOCATION_FIRST_COL.3 \
./gdsl_list_cursor_step_forward.3 \
./_gdsl_bintree_is_root.3 \
./gdsl_queue_get_name.3 \
./gdsl_queue_get_head.3 \
./gdsl_heap_alloc.3 \
./_gdsl_bintree_rotate_right_left.3 \
./gdsl_perm_inverse.3 \
./_gdsl_bstree_get_parent.3 \
./gdsl_heap_dump.3 \
./_gdsl_node_link.3 \
./gdsl_stack_get_bottom.3 \
./gdsl_queue.h.3 \
./_gdsl_bstree_search_next.3 \
./gdsl_stack.h.3 \
./gdsl_sort.h.3 \
./gdsl_heap_free.3 \
./gdsl_bstree_get_height.3 \
./GDSL_LOCATION_UNDEF.3 \
./_gdsl_bintree_is_empty.3 \
./gdsl_heap_get_size.3 \
./gdsl_queue_flush.3 \
./gdsl_heap_delete_top.3 \
./gdsl_bstree_delete.3 \
./gdsl_queue_set_name.3 \
./gdsl_rbtree_search.3 \
./_gdsl_node_write_xml.3 \
./gdsl_get_version.3 \
./gdsl_perm_t.3 \
./gdsl_perm.h.3 \
./gdsl_hash_get_entries_number.3 \
./gdsl_bstree.3 \
./gdsl_bstree_map_infix.3 \
./gdsl_list_delete_head.3 \
./gdsl_perm.3 \
./GDSL_LOCATION_LAST_ROW.3 \
./_gdsl_list.3 \
./_gdsl_bintree.h.3 \
./_gdsl_bstree_get_left.3 \
./bool.3 \
./gdsl_bstree_map_postfix.3 \
./_gdsl_bintree_set_right.3 \
./gdsl_heap_write_xml.3 \
./gdsl_rbtree_write.3 \
./gdsl_list_cursor_insert_after.3 \
./gdsl_list_remove_tail.3 \
./gdsl_interval_heap_map_forward.3 \
./GDSL_LOCATION_FIRST.3 \
./gdsl_perm_set_elements_array.3 \
./_gdsl_bstree_write_func_t.3 \
./_gdsl_bintree_get_size.3 \
./gdsl_alloc_func_t.3 \
./gdsl_queue_insert.3 \
./gdsl_list.h.3 \
./gdsl_hash_set_name.3 \
./_gdsl_node_dump.3 \
./gdsl_bstree_t.3 \
./gdsl_bstree_insert.3 \
./gdsl_list_insert_head.3 \
./gdsl_list_cursor_step_backward.3 \
./gdsl_list_cursor_has_pred.3 \
./_gdsl_list_t.3 \
./gdsl_interval_heap_dump.3 \
./gdsl_rbtree_remove.3 \
./_gdsl_bstree_remove.3 \
./_gdsl_bstree_insert.3 \
./gdsl_heap_remove_top.3 \
./gdsl_list_cursor_delete.3 \
./gdsl_perm_get_name.3 \
./gdsl_queue_remove.3 \
./_gdsl_bintree_t.3 \
./gdsl_perm_alloc.3 \
./_gdsl_bintree_get_left_ref.3 \
./gdsl_bstree_map_prefix.3 \
./_gdsl_bstree_t.3 \
./_gdsl_bstree_write_xml.3 \
./gdsl_interval_heap_free.3 \
./gdsl_list_cursor_move_to_head.3 \
./gdsl_heap.3 \
./_gdsl_list_insert_before.3 \
./gdsl_perm_position_t.3 \
./gdsl_interval_heap_t.3 \
./gdsl_2darray.3 \
./gdsl_stack_map_forward.3 \
./_gdsl_bintree_free.3 \
./_gdsl_node_write_func_t.3 \
./gdsl_perm_copy.3 \
./_gdsl_list_write.3 \
./gdsl_heap_get_top.3 \
./gdsl_stack_alloc.3 \
./gdsl_element_t.3 \
./gdsl_list_cursor_remove_before.3 \
./gdsl_list_cursor_t.3 \
./gdsl_list_remove_head.3 \
./_gdsl_bstree.3 \
./gdsl_heap_get_name.3 \
./gdsl_rbtree_get_size.3 \
./gdsl_perm_data_t.3 \
./gdsl_hash_search.3 \
./_gdsl_node_get_content.3 \
./_gdsl_list_free.3 \
./_gdsl_list_get_size.3 \
./gdsl_stack_set_name.3 \
./_gdsl_bintree.3 \
./gdsl_rbtree_write_xml.3 \
./gdsl_stack_remove.3 \
./gdsl_stack_get_top.3 \
./gdsl_perm_dump.3 \
./gdsl_bstree_dump.3 \
./gdsl_rbtree_dump.3 \
./gdsl_key_func_t.3 \
./gdsl_list_cursor_get_content.3 \
./gdsl_hash_insert.3 \
./_gdsl_bstree_is_root.3 \
./gdsl_perm_linear_next.3 \
./_gdsl_list_insert_after.3 \
./gdsl_perm_canonical_to_linear.3 \
./gdsl_list_set_name.3 \
./gdsl_bstree_remove.3 \
./gdsl_list_cursor_remove_after.3 \
./_gdsl_node_map_func_t.3 \
./gdsl_list_cursor_set_content.3 \
./gdsl_perm_get_size.3 \
./gdsl_rbtree_insert.3 \
./gdsl_2darray_write.3 \
./gdsl_stack.3 \
./_gdsl_bstree_free.3 \
./_gdsl_list_link.3 \
./gdsl_rbtree_t.3 \
./gdsl_macros.3 \
./_gdsl_node_t.3 \
./gdsl_queue_is_empty.3 \
./gdsl_heap_t.3 \
./gdsl_queue_write.3 \
./gdsl_copy_func_t.3 \
./gdsl_free_func_t.3 \
./gdsl_compare_func_t.3 \
./gdsl_interval_heap_set_max_size.3 \
./gdsl_perm_get_elements_array.3 \
./_gdsl_node_set_succ.3 \
./gdsl_queue_search.3 \
./gdsl_interval_heap.3 \
./gdsl_hash_delete.3 \
./gdsl_hash_map.3 \
./gdsl_sort.3 \
./GDSL_MIN.3 \
./gdsl_constant_t.3 \
./gdsl_interval_heap_get_min.3 \
./gdsl_rbtree_height.3 \
./GDSL_MAP_STOP.3 \
./gdsl_hash_get_lists_max_size.3 \
./gdsl_list_write_xml.3 \
./_gdsl_bintree_get_right_ref.3 \
./gdsl_stack_set_growing_factor.3 \
./gdsl_hash_remove.3 \
./gdsl_list_cursor_free.3 \
./_gdsl_list_map_forward.3 \
./gdsl_2darray_get_name.3 \
./GDSL_FOUND.3 \
./gdsl_interval_heap_write.3 \
./_gdsl_node_alloc.3 \
./_gdsl_bintree_map_postfix.3 \
./gdsl_bstree_write_xml.3 \
./gdsl_interval_heap_flush.3 \
./_gdsl_bintree_get_content.3 \
./_gdsl_bintree_dump.3 \
./_gdsl_bstree_copy.3 \
./_gdsl_node_get_succ.3 \
./_gdsl_bintree_get_parent.3 \
./gdsl_rbtree_map_prefix.3 \
./gdsl_heap_flush.3 \
./gdsl_list_cursor_insert_before.3 \
./_gdsl_node.3 \
./gdsl_rbtree.h.3 \
./gdsl_perm_reverse.3 \
./gdsl.h.3 \
./_gdsl_node_unlink.3 \
./GDSL_MAX.3 \
./_gdsl_bstree.h.3 \
./gdsl_list_search_by_position.3 \
./GDSL_ERR_MEM_ALLOC.3 \
./GDSL_LOCATION_ROOT.3 \
./_gdsl_bstree_is_leaf.3 \
./gdsl_hash_get_size.3 \
./_gdsl_bintree_rotate_left_right.3 \
./_gdsl_bstree_get_content.3 \
./gdsl_stack_free.3 \
./_gdsl_bintree_write.3 \
./GDSL_LOCATION_TAIL.3 \
./_gdsl_bstree_alloc.3 \
./_gdsl_node_set_content.3 \
./_gdsl_bstree_get_height.3 \
./_gdsl_bintree_get_right.3 \
./gdsl_list_remove.3 \
./GDSL_LOCATION_BOTTOM.3 \
./gdsl_queue_get_tail.3 \
./gdsl_bstree_free.3 \
./FALSE.3 \
./gdsl_list_cursor_move_to_tail.3 \
./gdsl_stack_search_by_position.3 \
./gdsl_rbtree_set_name.3 \
./ushort.3 \
./gdsl_rbtree_is_empty.3 \
./_gdsl_list_dump.3 \
./GDSL_LOCATION_LAST.3 \
./_gdsl_bstree_map_postfix.3 \
./gdsl_perm_write_xml.3 \
./_gdsl_bstree_is_empty.3 \
./gdsl_hash_write.3 \
./gdsl_interval_heap_remove_min.3 \
./gdsl.3 \
./_gdsl_bintree_set_left.3 \
./gdsl_interval_heap.h.3 \
./gdsl_2darray_get_size.3 \
./_gdsl_list_search.3 \
./gdsl_location_t.3 \
./TRUE.3 \
./_gdsl_bintree_is_leaf.3 \
./gdsl_bstree_get_root.3 \
./gdsl_list_t.3 \
./gdsl_perm_linear_cycles_count.3 \
./gdsl_stack_get_growing_factor.3 \
./gdsl_queue.3 \
./gdsl_hash_get_longest_list_size.3 \
./_gdsl_list_write_xml.3 \
./gdsl_queue_get_size.3 \
./_gdsl_bintree_rotate_left.3 \
./GDSL_LOCATION_HEAD.3 \
./gdsl_2darray_get_columns_number.3 \
./gdsl_2darray_alloc.3 \
./gdsl_heap.h.3 \
./gdsl_list_map_backward.3 \
./gdsl_perm_linear_to_canonical.3 \
./gdsl_list_flush.3 \
./gdsl_perm_apply_on_array.3 \
./gdsl_bstree_set_name.3 \
./gdsl_list_dump.3 \
./gdsl_list.3 \
./_gdsl_bintree_get_left.3

EXTRA_DIST	= $(man_MANS)

fileslist:  	 
		@rm -f l && find . -name "*.3" >> l
